# retail-data-quality-agent

./: .env.example  .gitignore  Dockerfile  README.md  evaluate.py  pyproject.toml  pytest.ini  requirements.txt  run_daily_report.py  run_day.py  schedule_daily_report.py  setup_wizard.py
.cursor/rules/: project-retaildata-rule.mdc
.cursor/skills/python-backend-upgrade/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
_legacy/: README.md
app/: __init__.py  logging_setup.py  main.py  request_context.py
app/api/routes/: daily_report.py  health.py
app/schemas/: __init__.py  daily_report.py  responses.py
config/: __init__.py  env_file.py  schema_aliases.py  settings.py  setup_wizard.py  timezone_aliases.py  wizard_defaults.py  wizard_llm.py  wizard_validation.py
config/logging/: console.yaml  json.yaml  json_dev.yaml  json_prod.yaml  text.yaml
data/: retail_data_quality_sim.csv
docs/: OPERATIONS.md  QUALITY_BOUNDARY.md  SECURITY.md
myagent/: __init__.py  agent.py  anomaly_detector.py  anomaly_impact.py  anomaly_to_prompt.py  data_loading.py  pipeline.py  prompts.py  retail_tool.py
myagent/.adk/: session.db
myagent/data_sources/: __init__.py  base.py  databricks_mcp.py  factory.py  local_csv.py
myagent/integrations/: __init__.py  databricks_mcp_client.py  mcp_sse_client.py  mcp_stdio_client.py  mcp_types.py  slack.py
myagent/llm/: __init__.py  summary.py
myagent/orchestration/: __init__.py  daily_report.py  pipeline_run.py
myagent/reporting/: __init__.py  daily_report_format.py
tests/: conftest.py  test_adk_mcp_integration.py  test_anomaly_to_prompt.py  test_daily_orchestration.py  test_data_sources.py  test_databricks_mcp.py  test_env_file.py  test_large_data.py  test_mcp_server_source.py  test_mcp_sse_client.py  test_mcp_stdio_client.py  test_pipeline_run.py  test_reporting.py  test_retail_tool.py  test_run_day_provider.py  test_schedule.py  test_schema_aliases.py  test_service_health.py  test_settings.py  test_setup_wizard.py  test_slack.py  test_timezone_aliases.py
tools/: doctor.py  paired_run.py  test_slack.py
